# cloud-services-backup-cli

./: .env  .gitignore  LICENSE  README.md  bitbucket  dropbox  github  gmail  google-drive  google-photos  pyproject.toml
helpers/: list-bitbucket-git-repos  list-github-public-repos
src/: dropbox  gmail  google-drive  google-photos
src/cloud_services_backup_cli/: USAGE.txt  __main__.py
src/cloud_services_backup_cli/lib/: __init__.py  service.py  util.py
src/cloud_services_backup_cli/services/: __init__.py  bitbucket.py  dropbox.py  github.py  gmail.py  google_calendar.py  google_contacts.py  google_drive.py  google_photos.py  google_takeout.py  google_takeout_photos.py
src/cloud_services_backup_cli/tools/: gcalvault.py  gcardvault.py  git.py  gyb.py  media.py  rclone.py  rsync.py  shell.py
src/tools/: run-rclone
tools/: run-rclone
